--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -322,6 +322,7 @@
       </div>
     </div>
   </div>
+  <button (click)="notify()">Send Notification</button>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
