--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,6 +27,7 @@
 
             video {
                 width: 100%;
+                height: 270px;
                 background-color: #282828;
             }
 
@@ -38,7 +39,9 @@
             }
 
             img {
-                width: 100%;
+                width: auto;
+                height: 270px;
+                margin: auto;
             }
         }
     }
