--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,6 @@
-
-  
-  <div *ngIf="!isEdit" class="demo-app">
-    <div class="demo-app__title">
-      <span>Demo app Angular + PWA</span>
-    </div>
-    <div class="demo-app__content">
-      <div class="demo-app__content__item">
-        <div class="button" (click)="notify()">
-          <span>Send Notification</span>
-        </div>
-      </div>
-      <div class="demo-app__content__item">
-        <div *ngIf="!currentStream" class="button" (click)="startCamera()">
-          <span>Start Camera</span>
-        </div>
-        <div *ngIf="currentStream" class="button" (click)="stopCamera()">
-          <span>Stop Camera</span>
-        </div>
-        <div  class="button" (click)="switchCamera()">
-          <span>Switch Camera</span>
-        </div>
-      </div>
-      <div *ngIf="image.length === 0" class="demo-app__content__item demo-app__content__item--camera">
-         <div (click)="startCamera()" *ngIf="!currentStream" class="camera-icon">
-          <app-camera-icon ></app-camera-icon>
-        </div>
-        <video #videoElement autoplay></video>
-        <canvas #canvas style="display:none;"></canvas>
-      </div>
-      <div *ngIf="currentStream" class="demo-app__content__item">
-        <div class="button" (click)="takePicture()">
-          <span>Take Picture</span>
-        </div>
-      </div>
-      <div *ngIf="image.length" class="demo-app__content__item">
-        <img [src]="image" alt="">
-      </div>
-      <div (click)="onEdit()" *ngIf="image.length" class="button">
-        <span>Edit</span>
-      </div>
-    </div>
+<div class="app">
+  <div class="app__title">
+    <span>Demo app Angular + PWA</span>
   </div>
-
-
-  <div (click)="onBack()" *ngIf="isEdit" class="button">
-    <span>Back</span>
-  </div>
-  <div  #tuiRef [style]="isEdit ? 'height: 1000px !important' : ''">
-    <canvas *ngIf="isEdit"></canvas>
-  </div>
-
-
-
-
-<!-- <router-outlet /> -->
+  <router-outlet></router-outlet>
+</div>
