--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,82 +1,13 @@
-.demo-app {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 0 auto;
-    width: 100%;
-    max-width: 400px;
+.app {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 400px;
 
-    &__title {
-        margin-top: 30px;
-        font-weight: bold;
-        font-size: 24px;
-        text-align: center;
-        
-    }
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        align-items: center;
-
-        &__item {
-            width: 100%;
-            display: flex;
-            gap: 10px;
-
-            video {
-                width: 100%;
-                height: 270px;
-                background-color: #282828;
-            }
-
-            &--camera {
-                display: flex;
-                flex-direction: column;
-                position: relative;
-                cursor: pointer;
-            }
-
-            img {
-                width: auto;
-                height: 270px;
-                margin: auto;
-            }
-        }
-    }
-}
-
-.button {
-    display: flex;
-    align-items: center;
+  &__title {
+    margin-top: 30px;
+    font-weight: bold;
+    font-size: 24px;
     text-align: center;
-    width: calc(100% - 40px);
-    background: #282828;
-    padding: 20px;
-    border-radius: 20px;
-    cursor: pointer;
-
-    span {
-        margin: auto;
-    }
-
-    &:hover {
-        background-color: #F4B389;
-        color: black;
-    }
-}
-
-.camera-icon {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-}
-
-.tui-image-editor-container {
-    height: 1000px !important;
+    margin-bottom: 20px;
+  }
 }
