--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,25 @@ body {
     position: relative;
 }
 
+
+
+.button {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: calc(100% - 40px);
+    background: #282828;
+    padding: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+
+    span {
+        margin: auto;
+    }
+
+    &:hover {
+        background-color: #F4B389;
+        color: black;
+    }
+}
+
