--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,15 +1,7 @@
-.demo-app {
+.home {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    
-    &__title {
-        margin-top: 30px;
-        font-weight: bold;
-        font-size: 24px;
-        text-align: center;
-        
-    }
 
     &__content {
         display: flex;
@@ -21,39 +13,6 @@
             width: 100%;
             display: flex;
             gap: 10px;
-
-            video {
-                width: 100%;
-                height: 270px;
-                background-color: #282828;
-            }
-
-            &--camera {
-                display: flex;
-                flex-direction: column;
-                position: relative;
-                cursor: pointer;
-            }
-
-            img {
-                width: auto;
-                height: 270px;
-                margin: auto;
-            }
         }
     }
-}
-
-.camera-icon {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-}
-
-.tui-image-editor-container {
-    height: 1000px !important;
 }
